--- a/Ui.ui
+++ b/Ui.ui
@@ -6,20 +6,14 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>681</width>
-    <height>350</height>
+    <width>675</width>
+    <height>757</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>458</width>
-    <height>350</height>
-   </size>
-  </property>
-  <property name="maximumSize">
-   <size>
-    <width>681</width>
-    <height>350</height>
+    <width>675</width>
+    <height>757</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -126,6 +120,43 @@
         <property name="text">
          <string>Generate</string>
         </property>
+       </widget>
+      </item>
+      <item>
+       <layout class="QHBoxLayout" name="horizontalLayout_4">
+        <item>
+         <widget class="QPushButton" name="add_to_list_button">
+          <property name="text">
+           <string>Add to List</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QPushButton" name="remove_from_list_button">
+          <property name="text">
+           <string>Remove from List</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
+      <item>
+       <widget class="QTableWidget" name="tableWidget">
+        <column>
+         <property name="text">
+          <string>Account</string>
+         </property>
+        </column>
+        <column>
+         <property name="text">
+          <string>Username</string>
+         </property>
+        </column>
+        <column>
+         <property name="text">
+          <string>Password</string>
+         </property>
+        </column>
        </widget>
       </item>
      </layout>
